# predict_stock

./: .gitignore  README.md  analyze_and_visualize.py  app.py  detect_outliers.py  fetch_samsung_stock.py  manage_model.py  predict_samsung_stock.py  predict_tomorrow.py  preprocess_samsung_stock.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_csv.py  test_csv2.py  train_linear_regression.py
stock/: __init__.py  analytics.py  config.py  pipeline.py  search.py
templates/: error.html  index.html
tests/: conftest.py
tests/e2e/: test_search_lg_cns.py
