[project]
name = "predict-stock"
version = "0.1.0"
description = "Yahoo Finance 범용 주식 검색 및 예측"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stock*"]
